creusot/tests/should_fail/opaque_unproveable.coma

module OpaqueUnproveable_Test
  use prelude.Intrinsic
  predicate opaque0 [#"../opaque_unproveable.rs" 9 4 9 27] (_1 : ())
  let rec opaque0 (_1:()) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = opaque0 _1} (! return' {result}) ]
    
  let rec test (_1:()) (return'  (ret:()))= (! bb0 
    [ bb0 = {[@expl:assertion] [#"../opaque_unproveable.rs" 16 18 16 29] opaque0 ()}
      [ &_0 <- [#"../opaque_unproveable.rs" 14 14 17 1] () ] return' {_0} ]
    )[ & _0 : () = any_l () : () ]  [ return' (result:())-> (! return' {result}) ] 
end
